Fix build to run on java 7